--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,82 +1,81 @@
 body {
-  font-family: 'Rubik', Helvetica, Arial, sans-serif;
+    font-family: 'Rubik', Helvetica, Arial, sans-serif;
 }
 
-#header {
-}
+#header {}
 
 #footer {
-  border-top: 1px solid #eeeeee;
-  color: #777777;
-	margin-top: 30px;
-	padding-top: 20px 0;
-  width: 100%;
+    border-top: 1px solid #eeeeee;
+    color: #777777;
+    margin-top: 30px;
+    padding-top: 20px 0;
+    width: 100%;
 
-  p {
-    float: right;
-    padding-top: 15px;
-  }
+    p {
+        float: right;
+        padding-top: 15px;
+    }
 }
 
 .budget-table {
-  margin: 30px 0;
+    margin: 30px 0;
 
-  thead {
-    tr {
-      th {
-        padding: 5px;
+    thead {
+        tr {
+            th {
+                padding: 5px;
 
-        &.header-cell {
-          background-color: #cccccc;
-          border: 1px solid #222222;
-          color: #222222;
-          min-width: 300px;
+                &.header-cell {
+                    background-color: #cccccc;
+                    border: 1px solid #222222;
+                    color: #222222;
+                    min-width: 300px;
+                }
+            }
         }
-      }
     }
-  }
 
-  tbody {
-    tr {
-      th {
-        padding: 5px;
+    tbody {
+        tr {
+            th {
+                padding: 5px;
 
-        &.data-cell {
-          background-color: #ffffff;
-          border: 1px solid #222222;
-          color: #222222;
-          min-width: 300px;
+                &.data-cell {
+                    background-color: #ffffff;
+                    border: 1px solid #222222;
+                    color: #222222;
+                    min-width: 300px;
+                }
+
+                &.edit-cell {
+                    cursor: pointer;
+                }
+            }
         }
-
-        &.edit-cell {
-          cursor: pointer;
-        }
-      }
     }
-  }
 
-  tfoot {
-    tr {
-      th {
-        border: 1px solid #222222;
-        min-width: 300px;
-        padding: 5px;
+    tfoot {
+        tr {
+            th {
+                border: 1px solid #222222;
+                min-width: 300px;
+                padding: 5px;
 
-        &.total-label {
-          background-color: #222222;
-          color: #ffffff;
+                &.total-label {
+                    background-color: #222222;
+                    color: #ffffff;
+                }
+
+                &.total-value {
+                    background-color: #007700;
+                    color: #ffffff;
+                }
+            }
         }
-
-        &.total-value {
-          background-color: #007700;
-          color: #ffffff;
-        }
-      }
     }
-  }
 
-  .currency-cell {
-    padding-right: 10px;
-    text-align: right;
-  }
+    .currency-cell {
+        padding-right: 10px;
+        text-align: right;
+    }
 }
