--- a/views/layouts/base.handlebars
+++ b/views/layouts/base.handlebars
@@ -1,18 +1,17 @@
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>Budget Planner</title>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link href="/styles/site.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Budget Planner</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link href="/styles/site.min.css" rel="stylesheet">
 </head>
+
 <body>
-  {{> header}}
+    {{> header}} {{{body}}} {{> footer}}
 
-  {{{body}}}
-
-  {{> footer}}
-
-  <script src="/js/jquery/jquery-1.11.3.min.js"></script>
-  <script src="/js/bootstrap/bootstrap-3.3.5.min.js"></script>
+    <script src="/js/jquery/jquery-1.11.3.min.js"></script>
+    <script src="/js/bootstrap/bootstrap-3.3.5.min.js"></script>
 </body>
+
 </html>
