Facebook login setup
Pull Facebook ID and Secret from ENV

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -18,7 +18,7 @@
                             {{/each}}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/signin">Sign In</a></li>
+                        <li><a href="/login/facebook">Sign In</a></li>
                     </ul>
                 </div>
             </div>
