--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -2,7 +2,20 @@ body {
     font-family: 'Rubik', Helvetica, Arial, sans-serif;
 }
 
-#header {}
+#header {
+    .navbar-user-picture {
+        padding: 0px;
+
+        span {
+            padding: 0 10px;
+        }
+
+        img {
+            height: 50px;
+            width: 50px;
+        }
+    }
+}
 
 #footer {
     border-top: 1px solid #eeeeee;
