Added logout dropdown link

--- a/views/layouts/base.handlebars
+++ b/views/layouts/base.handlebars
@@ -10,8 +10,8 @@
 <body>
     {{> header}} {{{body}}} {{> footer}}
 
-    <script src="/js/jquery/jquery-1.11.3.min.js"></script>
-    <script src="/js/bootstrap/bootstrap-3.3.5.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
